force-app/main/default/objects/Purchase_Summary__c/Purchase_Summary__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Purchase Summary detail to show on event landing page.</description>
    <label>Purchase Summary</label>
    <nameField>
        <label>Purchase Summary Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>