force-app/main/default/objects/Purchase_Summary__c/fields/Event_Setting__c.field-meta.xml
<CustomField>
    <fullName>Event_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Setting</label>
    <referenceTo>Event_Setting__c</referenceTo>
    <relationshipLabel>Purchase Summaries</relationshipLabel>
    <relationshipName>Purchase_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>