force-app/main/default/objects/Purchase_Summary__c/fields/Event_Tab__c.field-meta.xml
<CustomField>
    <fullName>Event_Tab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IMCC Tab for stand contractor/Purchase Summary Information.</description>
    <inlineHelpText>IMCC Tab for stand contractor/Purchase Summary Information.</inlineHelpText>
    <label>Select Internal Page Tab</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event_Tabs__c.Event_Setting__c</field>
            <operation>equals</operation>
            <valueField>$Source.Event_Setting__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Tabs__c</referenceTo>
    <relationshipLabel>Purchase Summaries</relationshipLabel>
    <relationshipName>Purchase_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>