force-app/main/default/objects/Purchase_Summary__c/fields/External_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Link__c</fullName>
    <description>External link which will be used for badge/lead retrieval/virtual event.</description>
    <inlineHelpText>External link which will be used for badge/lead retrieval/virtual event.</inlineHelpText>
    <label>External Link</label>
    <type>Url</type>
</CustomField>