force-app/main/default/objects/Purchase_Summary__c/fields/External_Link_Label__c.field-meta.xml
<CustomField>
    <fullName>External_Link_Label__c</fullName>
    <description>External link Label which will be used for badge/lead retrieval/virtual event.</description>
    <inlineHelpText>External link Label which will be used for badge/lead retrieval/virtual event.</inlineHelpText>
    <label>External Link Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>