force-app/main/default/objects/Purchase_Summary__c/fields/Information_Label__c.field-meta.xml
<CustomField>
    <fullName>Information_Label__c</fullName>
    <description>Information Tab Label to show on purchase summary popup.</description>
    <inlineHelpText>Information Tab Label to show on purchase summary popup.</inlineHelpText>
    <label>Information Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>