force-app/main/default/objects/Purchase_Summary__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unchecked if you want to hide from layout home page</description>
    <inlineHelpText>Unchecked if you want to hide from layout home page</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>