force-app/main/default/objects/Purchase_Summary__c/fields/Mark_This_Task_Helptext__c.field-meta.xml
<CustomField>
    <fullName>Mark_This_Task_Helptext__c</fullName>
    <description>Mark This Task Checkbox help text.</description>
    <inlineHelpText>Mark This Task Checkbox help text.</inlineHelpText>
    <label>Mark This Task Helptext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>