force-app/main/default/objects/Purchase_Summary__c/fields/Purchase_Summary_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Summary_Type__c</fullName>
    <label>Purchase Summary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Summary_Type</valueSetName>
    </valueSet>
</CustomField>