force-app/main/default/objects/Purchase_Summary__c/fields/Standard_Sub_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Standard_Sub_Header_Text__c</fullName>
    <description>Standard Sub header text to show on purchase summary popup.</description>
    <inlineHelpText>Standard Sub header text to show on purchase summary popup.</inlineHelpText>
    <label>Standard Sub Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>