force-app/main/default/objects/Purchase_Summary__c/fields/Sub_Header_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sub_Header_Notes__c</fullName>
    <description>Sub Header Notes to show on purchase summary popup.</description>
    <inlineHelpText>Sub Header Notes to show on purchase summary popup.</inlineHelpText>
    <label>Sub Header Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>