force-app/main/default/objects/Purchase_Summary__c/fields/Sub_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Sub_Header_Text__c</fullName>
    <description>Sub Header Text to show on purchase summary popup.</description>
    <inlineHelpText>Sub Header Text to show on purchase summary popup.</inlineHelpText>
    <label>Sub Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>