force-app/main/default/objects/Purchase_Summary__c/fields/Task_Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Submission_Type__c</fullName>
    <label>Task Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Portal</fullName>
            </value>
            <value>
                <fullName>External Portal</fullName>
                <default>true</default>
                <label>3rd Party Link</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>